<resources>
    <string name="app_name">OpenPGP Secure Mail</string>
    <string name="email">Email</string>
    <string name="choose_account_message">Choose Account</string>
    <string name="play_services_failed_message">
        This application requires Google play service to work.
        Please install Google play services or update if already present.
    </string>
    <string name="inbox">Inbox</string>
    <string name="sent">Sent items</string>
    <string name="outbox">Outbox</string>
    <string name="drafts">Drafts</string>
    <string name="others_menu_label">Others</string>
    <string name="account_image_description">User account icon</string>
    <string name="action_draft">Save draft</string>
    <string name="action_discard">Discard</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="total_rec_mess">Total received messages</string>
    <string name="total_sent_mess">Total sent messages</string>
    <string name="error_connect">An error occurred. %1$s</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="trash">Trash</string>
    <string name="mail_image">Mail image</string>
    <string name="no_mails">No Mails</string>
    <string name="keydetail">Key Detail</string>
    <string name="about">About</string>
    <string name="start_message1"><b>OpenPGP Secure Mail</b> helps you to encrypt
        all your emails.\n The aim of this application is to provide<b> Pretty Good Privacy</b>
        encryption on Android devices.</string>
    <string name="start_message2">OpenPGP Secure Mail provides impervious
        security.\n Your keys will be stored in encrypted database \n and Private key is also self
        encrypted.
        </string>
    <string name="start_message3">OpenPGP Secure Mail encryption keys are
        unique for every user so    backup of your keys because in case
        of app uninstall or data clear you must   have keys to decrypt your data
        <b>backing up keys is your own responsibility</b></string>
    <string name="gnupg_note">Note: You can use your keys generated by GnuPG</string>
    <string name="generate_new_keys_message">First using the application, generate new key pair</string>
    <string name="settings">Settings</string>
</resources>
